crates/carta/tests/snapshots/golden_writer__man__common__emphasis-family.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\f[I]emph\f[R] \f[B]strong\f[R] [STRIKEOUT:struck] super^2^ sub~3~
