crates/carta/tests/snapshots/golden_writer__man__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\f[B]bold\f[R] opens the line
.PP
*literal star
