crates/carta/tests/snapshots/golden_writer__man__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\f[I]see \c
.UR http://example.com
text
.UE \c
\ here\f[R]
