crates/carta/tests/snapshots/golden_writer__man__common__escape-flanking.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
a * b \(ga c | d and trailing_ref_
