crates/carta/tests/snapshots/golden_writer__man__common__escape-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
a & b % c # d _ e $ f { g } h \(ha i \(ti j
