crates/carta/tests/snapshots/golden_writer__man__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
ref[1]
.SH NOTES
.SS [1]
.IP
.EX
code only
.EE
