crates/carta/tests/snapshots/golden_writer__man__common__footnote-multipara.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
ref[1]
.SH NOTES
.SS [1]
.PP
first paragraph
.PP
second paragraph
