crates/carta/tests/snapshots/golden_writer__man__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
x[1] y[2]
.SH NOTES
.SS [1]
.PP
first
.SS [2]
.PP
second
