crates/carta/tests/snapshots/golden_writer__man__common__horizontal-rule.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
above
.PP
   *   *   *   *   *
.PP
below
