crates/carta/tests/snapshots/golden_writer__man__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
[IMAGE: \c
.UR https://example.org/i.png
alt
.UE \c
]
