crates/carta/tests/snapshots/golden_writer__man__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
an [IMAGE: alt words] inline
